# cc

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: FindOrAdd.cmake  Module.cmake  cboxConfig.cmake.in
modules/core/: CMakeLists.txt
modules/core/include/cc/core/: concepts.hpp  core.hpp  error.hpp  logger.hpp  result.hpp  types.hpp
modules/core/src/: error.cpp
modules/ecs/: CMakeLists.txt  documentation.md
modules/ecs/include/cc/ecs/: ecs.hpp
modules/ecs/include/cc/ecs/core/: entity.hpp  registry.hpp  type_id.hpp
modules/ecs/include/cc/ecs/storage/: component_storage.hpp  sparse_set.hpp
modules/ecs/include/cc/ecs/view/: view.hpp
modules/ecs/src/core/: registry.cpp
modules/gfx/: CMakeLists.txt  example.md
modules/gfx/backends/glfw/: glfw_window.cpp  glfw_window.hpp
modules/gfx/backends/opengl/: gl_buffer.cpp  gl_buffer.hpp  gl_command_buffer.cpp  gl_command_buffer.hpp  gl_descriptor_set.cpp  gl_descriptor_set.hpp  gl_descriptor_set_layout.cpp  gl_descriptor_set_layout.hpp  gl_device.cpp  gl_device.hpp  gl_framebuffer.cpp  gl_framebuffer.hpp  gl_pipeline.cpp  gl_pipeline.hpp  gl_sampler.cpp  gl_sampler.hpp  gl_shader.cpp  gl_shader.hpp  gl_texture.cpp  gl_texture.hpp
modules/gfx/include/cc/gfx/: fwd.hpp  gfx.hpp  types.hpp
modules/gfx/include/cc/gfx/buffer/: buffer.hpp
modules/gfx/include/cc/gfx/camera/: camera.hpp  editor_camera.hpp
modules/gfx/include/cc/gfx/command/: command_buffer.hpp
modules/gfx/include/cc/gfx/descriptor/: descriptor_set.hpp  descriptor_set_layout.hpp
modules/gfx/include/cc/gfx/device/: device.hpp
modules/gfx/include/cc/gfx/events/: base.hpp  bus.hpp  category.hpp  dispatcher.hpp  scoped_connection.hpp  type.hpp
modules/gfx/include/cc/gfx/events/application/: events.hpp
modules/gfx/include/cc/gfx/events/input/: events.hpp
modules/gfx/include/cc/gfx/events/render/: events.hpp
modules/gfx/include/cc/gfx/events/window/: events.hpp
modules/gfx/include/cc/gfx/framebuffer/: attachment.hpp  framebuffer.hpp
modules/gfx/include/cc/gfx/graph/: graph_utils.hpp  render_graph.hpp  render_pass.hpp  resource_handle.hpp
modules/gfx/include/cc/gfx/model/: loader.hpp  model.hpp
modules/gfx/include/cc/gfx/pipeline/: pipeline.hpp  pipeline_validation.hpp  vertex_layout.hpp
modules/gfx/include/cc/gfx/sampler/: sampler.hpp
modules/gfx/include/cc/gfx/shader/: compiler.hpp  reflection.hpp  shader.hpp
modules/gfx/include/cc/gfx/swapchain/: swapchain.hpp
modules/gfx/include/cc/gfx/texture/: texture.hpp
modules/gfx/include/cc/gfx/window/: window.hpp
modules/gfx/src/buffer/: buffer.cpp
modules/gfx/src/camera/: camera.cpp  editor_camera.cpp
modules/gfx/src/command/: command_buffer.cpp
modules/gfx/src/descriptor/: descriptor_set.cpp  descriptor_set_layout.cpp
modules/gfx/src/device/: device.cpp
modules/gfx/src/framebuffer/: framebuffer.cpp
modules/gfx/src/graph/: graph_utils.cpp  render_graph.cpp  render_pass.cpp
modules/gfx/src/model/: loader.cpp
modules/gfx/src/pipeline/: pipeline.cpp  pipeline_validation.cpp  vertex_layout.cpp
modules/gfx/src/sampler/: sampler.cpp
modules/gfx/src/shader/: compiler.cpp  reflection.cpp  shader.cpp
modules/gfx/src/swapchain/: swapchain.cpp
modules/gfx/src/texture/: texture.cpp
modules/gfx/src/window/: window.cpp
modules/io/: CMakeLists.txt
modules/io/include/cc/io/: io.hpp
modules/io/include/cc/io/base/: sbase.hpp
modules/io/include/cc/io/scene/: parser.hpp  scene.hpp
modules/io/include/cc/io/stream/: fstream.hpp
modules/io/src/stream/: fstream.cpp
modules/math/: CMakeLists.txt
modules/math/include/cc/math/: math.hpp
modules/math/include/cc/math/common/: constants.hpp  functions.hpp
modules/math/include/cc/math/detail/: arithmetic.hpp
modules/math/include/cc/math/interop/: op.hpp  transform.hpp
modules/math/include/cc/math/mat/: base.hpp  format.hpp  fwd.hpp  mat3.hpp  mat4.hpp
modules/math/include/cc/math/quat/: fwd.hpp  quat.hpp
modules/math/include/cc/math/vec/: base.hpp  format.hpp  fwd.hpp  vec2.hpp  vec3.hpp  vec4.hpp
modules/vision/: CMakeLists.txt
modules/vision/include/cc/vision/: vision.hpp
modules/vision/src/: dummy.cpp
studio/: CMakeLists.txt
studio/resources/shaders/: cube.vert  default.vert  drop.frag  lit.frag  lit.vert  model.frag  model.vert  normal.frag  plane.frag  plane.vert  reflect.frag  reflect.vert  shadow.frag  shadow.vert  simulation.vert  skybox.frag  skybox.vert  sphere_glass.frag  sphere_glass.vert  texcube.frag  texcube.vert  update.frag  water.frag  water.vert  water_surface.frag  water_surface.vert
studio/src/: main.cpp  skybox.cpp  skybox.hpp
studio/src/camera/: editor_camera.cpp
studio/src/cc/core/: Application.cpp  Application.hpp  Scene.cpp  Scene.hpp
studio/src/cc/renderer/: constants.hpp  renderer.hpp
studio/src/cc/renderer/camera/: camera.cpp  editor_camera.cpp  editor_camera.hpp
studio/src/model/: loader.hpp  model.hpp
studio/src/renderer/camera/: camera.hpp  editor_camera.hpp
studio/src/renderer/model/: loader.cpp  model.hpp
